spacing fix

--- a/Intro Style.css
+++ b/Intro Style.css
@@ -61,12 +61,11 @@ h3 {
     clear: both;
     align-items: center;
     justify-content: center;
-    display: flex;
+    display:inline-flex;
 }
 
 #barbacoaPic {
     float: right;
-
     
 }
 
